--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -19,7 +20,6 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.7",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.14",
     "@types/react-router-dom": "^5.3.3",
